# agent-assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/eval/: intent_routing_cases.json
docs/: AGENT_ARCHITECTURE_ZH.md  MULTI_AGENT_DEVELOPMENT_SPEC_ZH.md  PRODUCT_SHOWCASE_ZH.md  VERSION_CONTROL_GUIDE_ZH.md  requirements.md
mcp_servers/: __init__.py  tavily_search_server.py
skills/agent_browser/: SKILL.md
skills/memory_management/: SKILL.md
skills/search_research/: SKILL.md
skills/writing/: SKILL.md
src/pmaa/: __init__.py  background_jobs.py  (+4 more)
tests/: fake_gbrain_mcp_server.py  fake_mcp_search_server.py  test_action_audit.py  test_action_confirmation.py  test_api.py  test_background_jobs.py  test_browser_site_resolution.py  test_calendar_tool.py  test_chat_render.py  test_conversation_context.py  test_email_tool.py  test_failure_recovery.py  test_gbrain_tool.py  test_github_tool.py  test_history_confirmation.py  test_history_store.py  test_intent_eval_dataset.py  test_intent_routing.py  test_interest_topics.py  test_knowledge_agent.py  test_llm_agents.py  test_llm_client.py  test_markdown_export.py  test_mcp_client.py  test_memory_agent.py  test_monitor_api.py  test_monitor_store.py  test_multi_agent_api.py  test_multi_agent_children.py  test_multi_agent_contracts.py  test_multi_agent_orchestrator.py  test_multi_agent_registry.py  test_multi_agent_runtime.py  test_multi_agent_state.py  test_multi_agent_supervisor.py  test_notification_store.py  test_planner.py  test_policy_agent.py  test_scheduler.py  test_search_tool_factory.py  (+26 more)
(+89 files in other folders)
